[gd_scene load_steps=6 format=3 uid="uid://by0oifw6gjcd8"]

[ext_resource type="Script" path="res://main/objects/enemy.gd" id="1_jygmu"]
[ext_resource type="Texture2D" uid="uid://daq6h1ut81k32" path="res://main/projectileGenericTemp.png" id="2_bbypb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_amei8"]
radius = 25.0799

[sub_resource type="Animation" id="Animation_mlyko"]
resource_name = "knockback"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemySprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(0.5, -2, 1),
"update": 0,
"values": [Vector2(-1.07288e-06, -8.34465e-07), Vector2(0, 10), Vector2(-1.07288e-06, -8.34465e-07)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lodgk"]
_data = {
"knockback": SubResource("Animation_mlyko")
}

[node name="enemy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_jygmu")

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_amei8")

[node name="enemySprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-1.07288e-06, -8.34465e-07)
scale = Vector2(3.125, 3.125)
texture = ExtResource("2_bbypb")

[node name="enemyPivot" type="Node2D" parent="."]

[node name="enemyDirector" type="Node2D" parent="enemyPivot"]
position = Vector2(0, -3)

[node name="knockbackAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lodgk")
}

[node name="healthbarPivot" type="Node2D" parent="."]

[node name="underHealth" type="ColorRect" parent="healthbarPivot"]
offset_left = -24.0
offset_top = -36.0
offset_right = 26.0
offset_bottom = -31.0
color = Color(0.592157, 0, 0, 1)

[node name="overHealth" type="ColorRect" parent="healthbarPivot"]
offset_left = -24.0
offset_top = -36.0
offset_right = 26.0
offset_bottom = -31.0
color = Color(1, 0, 0, 1)
